@@ -50,6 +50,7 @@ customgradient2=3d,0,0.9,0.5,1,1,1
 customgradient3=none,0,1.12,1,1.15
 customgradient4=shine,0,1.05,1,0.92
 customgradient5=light,0,1.04,1,0.92
+customgradient6=light,0,1.3,1,0.925
 darkerBorders=false
 defBtnIndicator=glow
 dlgOpacity=100
@@ -86,7 +87,7 @@ lvAppearance=bevelled
 lvButton=false
 lvLines=old
 mapKdeIcons=true
-menuBgndAppearance=harsh
+menuBgndAppearance=customgradient6
 menuBgndGrad=horiz
 menuBgndImage=none
 menuBgndOpacity=100
