@@ -2,8 +2,9 @@
 -----
 1. Add option to use tiled pixmap as background for windows and menus.
 2. Draw line focus for items that cannot use glow focus.
-3. In preview window, draw background rings/image down from titlebar.
-4. Add option to use KDE4 palette's hove colour for kwin button symbol mouse-over.
+3. Use popup menu gradient's border setting to determine border type of menus.
+4. In preview window, draw background rings/image down from titlebar.
+5. Add option to use KDE4 palette's hove colour for kwin button symbol mouse-over.
 
 1.6.4
 -----
